--- a/test.html
+++ b/test.html
@@ -61,21 +61,85 @@ img {
 
 
 
-<div id="daily-var-report" class="section level1">
-<h1>Daily VaR report</h1>
+<div id="daily-99-var-report" class="section level1">
+<h1>Daily 99% VaR report</h1>
 <p>Date: 2016-01-29</p>
-<pre><code>## % latex table generated in R 3.2.2 by xtable 1.7-4 package
-## % Thu Feb 04 09:19:36 2016
-## \begin{table}[ht]
-## \centering
-## \begin{tabular}{rlrrr}
-##   \hline
-##  &amp; Name &amp; DailyReturn &amp; VaR\_0.99 &amp; VaR\_0.01 \\ 
-##   \hline
-## 2016-01-29 &amp; ED &amp; 0.02 &amp; -0.02 &amp; 0.01 \\ 
-##    \hline
-## \end{tabular}
-## \end{table}</code></pre>
+</div>
+<div id="ufts" class="section level1">
+<h1>UFTs</h1>
+<table border="1">
+<tr>
+<th>
+</th>
+<th>
+UFT
+</th>
+<th>
+Daily Return
+</th>
+<th>
+Lower Bound
+</th>
+<th>
+Upper Bound
+</th>
+</tr>
+<tr>
+<td align="right">
+2016-01-29
+</td>
+<td>
+ED
+</td>
+<td align="right">
+0.02
+</td>
+<td align="right">
+-0.02
+</td>
+<td align="right">
+0.01
+</td>
+</tr>
+</table>
+</div>
+<div id="pofs" class="section level1">
+<h1>POFs</h1>
+<table border="1">
+<tr>
+<th>
+</th>
+<th>
+Fund
+</th>
+<th>
+Daily Return
+</th>
+<th>
+Lower Bound
+</th>
+<th>
+Upper Bound
+</th>
+</tr>
+<tr>
+<td>
+2016-01-29
+</td>
+<td>
+HHSIX
+</td>
+<td align="center">
+0.011
+</td>
+<td align="center">
+-0.012
+</td>
+<td align="center">
+0.010
+</td>
+</tr>
+</table>
 </div>
 
 
