--- a/test.html
+++ b/test.html
@@ -61,85 +61,132 @@ img {
 
 
 
-<div id="daily-99-var-report" class="section level1">
-<h1>Daily 99% VaR report</h1>
-<p>Date: 2016-01-29</p>
-</div>
-<div id="ufts" class="section level1">
-<h1>UFTs</h1>
+<div id="daily-99-var-report" class="section level2">
+<h2>Daily 99% VaR report</h2>
+<p>Date: 2016-02-08</p>
+<ul>
+<li><strong>POFs</strong></li>
+</ul>
 <table border="1">
 <tr>
 <th>
 </th>
 <th>
-UFT
+Return_2016-02-08
 </th>
 <th>
-Daily Return
+VaR_0.99
 </th>
 <th>
-Lower Bound
-</th>
-<th>
-Upper Bound
-</th>
-</tr>
-<tr>
-<td align="right">
-2016-01-29
-</td>
-<td>
-ED
-</td>
-<td align="right">
-0.02
-</td>
-<td align="right">
--0.02
-</td>
-<td align="right">
-0.01
-</td>
-</tr>
-</table>
-</div>
-<div id="pofs" class="section level1">
-<h1>POFs</h1>
-<table border="1">
-<tr>
-<th>
-</th>
-<th>
-Fund
-</th>
-<th>
-Daily Return
-</th>
-<th>
-Lower Bound
-</th>
-<th>
-Upper Bound
+VaR_0.01
 </th>
 </tr>
 <tr>
 <td>
-2016-01-29
+ALPHX
 </td>
+<td align="center">
+-1.28
+</td>
+<td align="center">
+-1.02
+</td>
+<td align="center">
+0.85
+</td>
+</tr>
+<tr>
+<td>
+ALPIX
+</td>
+<td align="center">
+-1.16
+</td>
+<td align="center">
+-1.03
+</td>
+<td align="center">
+0.86
+</td>
+</tr>
+<tr>
 <td>
 HHSIX
 </td>
 <td align="center">
-0.011
+-1.71
 </td>
 <td align="center">
--0.012
+-1.28
 </td>
 <td align="center">
-0.010
+1.08
+</td>
+</tr>
+<tr>
+<td>
+HFINX
+</td>
+<td align="center">
+-0.50
+</td>
+<td align="center">
+-0.46
+</td>
+<td align="center">
+0.27
 </td>
 </tr>
 </table>
+<ul>
+<li><strong>UFTs</strong></li>
+</ul>
+<table border="1">
+<tr>
+<th>
+</th>
+<th>
+Return_2016-02-08
+</th>
+<th>
+VaR_0.99
+</th>
+<th>
+VaR_0.01
+</th>
+</tr>
+<tr>
+<td>
+ED
+</td>
+<td align="center">
+-2.657
+</td>
+<td align="center">
+-1.611
+</td>
+<td align="center">
+1.373
+</td>
+</tr>
+<tr>
+<td>
+LSD
+</td>
+<td align="center">
+-0.590
+</td>
+<td align="center">
+-0.408
+</td>
+<td align="center">
+0.230
+</td>
+</tr>
+</table>
+<ul>
+<li><strong>SubAdvisors</strong></li>
+</ul>
 </div>
 
 
