--- a/test.html
+++ b/test.html
@@ -63,16 +63,18 @@ img {
 
 <div id="daily-99-var-report" class="section level2">
 <h2>Daily 99% VaR report</h2>
-<p>Date: 2016-02-08</p>
+<p>Date: 2016-02-10</p>
 <ul>
 <li><strong>POFs</strong></li>
 </ul>
+<pre><code>## Warning in matrix(align.tmp[(2 - pos):(ncol(x) + 1)], nrow = nrow(x), ncol
+## = ncol(x) + : data length exceeds size of matrix</code></pre>
 <table border="1">
 <tr>
 <th>
 </th>
 <th>
-Return_2016-02-08
+Return_2016-02-10
 </th>
 <th>
 VaR_0.99
@@ -80,73 +82,19 @@ VaR_0.99
 <th>
 VaR_0.01
 </th>
-</tr>
-<tr>
-<td>
-ALPHX
-</td>
-<td align="center">
--1.28
-</td>
-<td align="center">
--1.02
-</td>
-<td align="center">
-0.85
-</td>
-</tr>
-<tr>
-<td>
-ALPIX
-</td>
-<td align="center">
--1.16
-</td>
-<td align="center">
--1.03
-</td>
-<td align="center">
-0.86
-</td>
-</tr>
-<tr>
-<td>
-HHSIX
-</td>
-<td align="center">
--1.71
-</td>
-<td align="center">
--1.28
-</td>
-<td align="center">
-1.08
-</td>
-</tr>
-<tr>
-<td>
-HFINX
-</td>
-<td align="center">
--0.50
-</td>
-<td align="center">
--0.46
-</td>
-<td align="center">
-0.27
-</td>
 </tr>
 </table>
 <ul>
 <li><strong>UFTs</strong></li>
 </ul>
+<pre><code>## Warning in matrix(align.tmp[(2 - pos):(ncol(x) + 1)], nrow = nrow(x), ncol
+## = ncol(x) + : data length exceeds size of matrix</code></pre>
 <table border="1">
 <tr>
 <th>
 </th>
 <th>
-Return_2016-02-08
+Return_2016-02-10
 </th>
 <th>
 VaR_0.99
@@ -155,38 +103,11 @@ VaR_0.99
 VaR_0.01
 </th>
 </tr>
-<tr>
-<td>
-ED
-</td>
-<td align="center">
--2.657
-</td>
-<td align="center">
--1.611
-</td>
-<td align="center">
-1.373
-</td>
-</tr>
-<tr>
-<td>
-LSD
-</td>
-<td align="center">
--0.590
-</td>
-<td align="center">
--0.408
-</td>
-<td align="center">
-0.230
-</td>
-</tr>
 </table>
 <ul>
 <li><strong>SubAdvisors</strong></li>
 </ul>
+
 </div>
 
 
